Revision history for Perl extension Geo::IP.

1.31  March 22nd 2008
	- Added BL/Saint Barthelemy, MF/Saint Martin (ISO-3166-1 additions)
        - Change default database name for NetWare to sys:/etc/GeoIP/GeoIP.dat
	  	 and MSWin32 to c:/GeoIP/GeoIP.dat ( Guenter Knauf )
	- Added support for time_zone lookup in GeoIP City API

1.30  December 16th 2007
	- Add GEOIP_MMAP_CACHE support ( Peter Shipley )
	- Added last_netmask - gets netmask of network block from last lookup
	- Merged in Geo::IP::PurePerl code, PurePerl code is mostly
		API compatible with XS code, except for charset functions
	! Added set_charset - enables UTF8 output of city name - requires C API 1.4.3 or greater

1.28  July 4th 2007
	- Added support for region name lookup in GeoIP City API
	- Fixed database_info method (Ken Neighbors)

1.27  September 8th 2005
	- Fixed Autoloader/open issue (Alexander Vasiljev)
	- Fixed compilation error in Perl 5.005 with semicolon
		in GeoIP_database_info in IP.xs	(Stephen Schulte)
	- Added support for open_type (Frank Mather)

1.26  May 19th 2005
	- Fixed segfault issue if non-resolvable domain name is
	  passed to region_by_addr or region_by_name
	- Added support for GEOIP_INDEX_CACHE - which just caches
        the most frequently accessed index portion of the database, resulting
        in faster lookups than GEOIP_STANDARD, but less memory usage than
        GEOIP_MEMORY_CACHE

1.25  December 24th 2004
	- Added database_info method (Frank Mather)
	- Added example/netspeed.pl to MANIFEST

1.24  November 30th 2004
	- Fixed memory leak in ISP/Organization database lookups
		by adding O_CHAR to typemap

1.23  October 6th 2004
	- Updated test case, removed www.bundesregierung.de
	- Geo::Mirror: fallback to using Geo::IP::PurePerl if Geo::IP is not available
		(Graham Barr)
	- Geo::Mirror: added support for mirror freshness

1.22  July 29th 2004
	- Added support for Netspeed
	- Fixed IP address in examples

1.21  July 28th 2003