@@ -16,7 +16,6 @@ while (<DATA>) {
 }
 
 __DATA__
-172.143.184.135
 12.10.1.4
 0.0.0.0
 66.108.94.158
